@startuml City_Veterinary_Office_ERD
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBorderColor #333333
skinparam classBackgroundColor #FFFFFF
skinparam arrowColor #333333
skinparam noteBkgColor #FFFACD

' ============================================
' ENTITIES
' ============================================

entity "Users" as Users {
    * id : bigint [PK]
    --
    first_name : string
    middle_name : string [nullable]
    last_name : string
    gender : string
    birthday : date [nullable]
    contact_number : string [nullable]
    emergency_contact : string [nullable]
    street : string [nullable]
    barangay : string [nullable]
    city_municipality : string [nullable]
    province : string [nullable]
    zip_code : string [nullable]
    email : string [unique]
    password : string
    role : enum(admin|user)
    id_photo : string [nullable]
    email_verified_at : timestamp [nullable]
    created_at : timestamp
    updated_at : timestamp
}

entity "Pets" as Pets {
    * id : bigint [PK]
    * user_id : bigint [FK]
    --
    species : string
    breed : string
    estimated_age_years : int
    estimated_age_months : int
    gender : enum(Male|Female)
    color_markings : text [nullable]
    description : text [nullable]
    photo : string [nullable]
    status : enum(impounded|adoptable|registered|adopted|returned)
    impounded_date : date [nullable]
    caught_location : string [nullable]
    decision_date : date [nullable]
    adoption_reason : string [nullable]
    adoption_reason_other : string [nullable]
    adoption_notes : text [nullable]
    created_at : timestamp
    updated_at : timestamp
}

entity "Pet_Requests" as PetRequests {
    * id : bigint [PK]
    * user_id : bigint [FK]
    * requestable_id : bigint [FK]
    * requestable_type : string
    --
    type : enum(adoption|rescue|query|other)
    status : enum(pending|approved|rejected|withdrawn)
    reason : text [nullable]
    contact_info : string [nullable]
    admin_notes : text [nullable]
    photos : json [nullable]
    additional_data : json [nullable]
    denial_reason : text [nullable]
    created_at : timestamp
    updated_at : timestamp
}

entity "Pet_Registrations" as PetRegistrations {
    * id : bigint [PK]
    * user_id : bigint [FK]
    --
    pet_name : string
    species : string
    breed : string
    birthday : date [nullable]
    gender : enum(Male|Female)
    color_markings : json [nullable]
    description : text [nullable]
    photo : string [nullable]
    status : enum(pending|approved|rejected)
    denial_reason : text [nullable]
    created_at : timestamp
    updated_at : timestamp
}

entity "Posters" as Posters {
    * id : bigint [PK]
    * user_id : bigint [FK]
    --
    type : enum(lost|found)
    pet_name : string [nullable]
    species : string
    breed : string
    gender : string
    color_markings : text [nullable]
    date_lost_found : date
    last_seen : string [nullable]
    found_at : string [nullable]
    photo : string
    contact_info : string
    reward : decimal(8,2) [nullable]
    approved : boolean
    status : enum(active|inactive|resolved)
    description : text [nullable]
    uploader_comments : text [nullable]
    location_details : string [nullable]
    created_at : timestamp
    updated_at : timestamp
}

entity "Announcements" as Announcements {
    * id : bigint [PK]
    --
    title : string
    category : string
    description : text
    date_when : string
    location : string [nullable]
    created_at : timestamp
    updated_at : timestamp
}

entity "Cache" as Cache {
    * key : string [PK]
    --
    value : longtext
    expiration : int
}

entity "Jobs" as Jobs {
    * id : bigint [PK]
    --
    queue : string
    payload : longtext
    attempts : int
    reserved_at : int [nullable]
    available_at : int
    created_at : int
}

' ============================================
' RELATIONSHIPS
' ============================================

Users ||--o{ Pets : "owns"
Users ||--o{ PetRequests : "creates"
Users ||--o{ PetRegistrations : "submits"
Users ||--o{ Posters : "creates"

Pets ||--o{ PetRequests : "can have"

PetRegistrations }o--|| Users : "belongs to"

Posters }o--|| Users : "created by"

' ============================================
' NOTES
' ============================================

note right of Users
  - Stores user profile information
  - Can be Admin (manages system)
  - Or User (public/registered member)
  - Email verification required
end note

note right of Pets
  - Impounded pets in care
  - Can transition to adoptable
  - Tracks location, age, physical description
  - Links to adoption requests
end note

note right of PetRequests
  - Polymorphic relationship
  - Can be tied to Pets or other resources
  - Tracks adoption, rescue, query requests
  - Admin notes for decision tracking
end note

note right of PetRegistrations
  - User-submitted pet registration
  - Goes through approval workflow
  - Display ID format: PR####
end note

note right of Posters
  - Lost & Found listings
  - Created by users
  - Admin approval workflow
  - Tracks location and reward
end note

note right of Announcements
  - System announcements
  - Events and important notices
  - No user association (global)
end note

@enduml
